[gd_scene load_steps=5 format=3 uid="uid://duqpp1dik8h8h"]

[ext_resource type="Script" path="res://sources/gui/character/Character.gd" id="2_aacye"]
[ext_resource type="Script" path="res://sources/gui/character/Attributes.gd" id="2_nrudd"]
[ext_resource type="Script" path="res://sources/gui/character/Stats.gd" id="3_v4km6"]
[ext_resource type="Script" path="res://sources/gui/character/Traits.gd" id="4_1wiqu"]

[node name="Character" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_aacye")

[node name="PlayerName" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="PlayerName"]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerName/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PlayerName/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PlayerName/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Entry" type="LineEdit" parent="PlayerName/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 32)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter Character Name"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false

[node name="Name" type="Label" parent="PlayerName/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1

[node name="EmptyTop" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Display" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EmptyLeft" type="Control" parent="Display"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Attributes" type="PanelContainer" parent="Display"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"PanelSideLeft"
script = ExtResource("2_nrudd")

[node name="Margin" type="MarginContainer" parent="Display/Attributes"]
layout_mode = 2
theme_override_constants/margin_left = 12

[node name="VBox" type="VBoxContainer" parent="Display/Attributes/Margin"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2
text = "Attributes"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Strength" type="HBoxContainer" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Attributes/Margin/VBox/Strength"]
layout_mode = 2
text = "Strength"

[node name="Empty" type="Control" parent="Display/Attributes/Margin/VBox/Strength"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Minus" type="Button" parent="Display/Attributes/Margin/VBox/Strength"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "-"

[node name="Value" type="Label" parent="Display/Attributes/Margin/VBox/Strength"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="Display/Attributes/Margin/VBox/Strength"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "+"

[node name="Vitality" type="HBoxContainer" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Attributes/Margin/VBox/Vitality"]
layout_mode = 2
text = "Vitality"

[node name="Empty" type="Control" parent="Display/Attributes/Margin/VBox/Vitality"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Minus" type="Button" parent="Display/Attributes/Margin/VBox/Vitality"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "-"

[node name="Value" type="Label" parent="Display/Attributes/Margin/VBox/Vitality"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="Display/Attributes/Margin/VBox/Vitality"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "+"

[node name="Agility" type="HBoxContainer" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Attributes/Margin/VBox/Agility"]
layout_mode = 2
text = "Agility"

[node name="Empty" type="Control" parent="Display/Attributes/Margin/VBox/Agility"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Minus" type="Button" parent="Display/Attributes/Margin/VBox/Agility"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "-"

[node name="Value" type="Label" parent="Display/Attributes/Margin/VBox/Agility"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="Display/Attributes/Margin/VBox/Agility"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "+"

[node name="Endurance" type="HBoxContainer" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Attributes/Margin/VBox/Endurance"]
layout_mode = 2
text = "Endurance"

[node name="Empty" type="Control" parent="Display/Attributes/Margin/VBox/Endurance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Minus" type="Button" parent="Display/Attributes/Margin/VBox/Endurance"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "-"

[node name="Value" type="Label" parent="Display/Attributes/Margin/VBox/Endurance"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="Display/Attributes/Margin/VBox/Endurance"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "+"

[node name="Concentration" type="HBoxContainer" parent="Display/Attributes/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Attributes/Margin/VBox/Concentration"]
layout_mode = 2
text = "Concentration"

[node name="Empty" type="Control" parent="Display/Attributes/Margin/VBox/Concentration"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Minus" type="Button" parent="Display/Attributes/Margin/VBox/Concentration"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "-"

[node name="Value" type="Label" parent="Display/Attributes/Margin/VBox/Concentration"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Plus" type="Button" parent="Display/Attributes/Margin/VBox/Concentration"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "+"

[node name="Stats" type="PanelContainer" parent="Display"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"PanelSideLeft"
script = ExtResource("3_v4km6")

[node name="Margin" type="MarginContainer" parent="Display/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 12

[node name="VBox" type="VBoxContainer" parent="Display/Stats/Margin"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Display/Stats/Margin/VBox"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Display/Stats/Margin/VBox"]
layout_mode = 2

[node name="Level" type="HBoxContainer" parent="Display/Stats/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Stats/Margin/VBox/Level"]
layout_mode = 2
text = "Level"

[node name="Empty" type="Control" parent="Display/Stats/Margin/VBox/Level"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Display/Stats/Margin/VBox/Level"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="Location" type="HBoxContainer" parent="Display/Stats/Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Display/Stats/Margin/VBox/Location"]
layout_mode = 2
text = "Location"

[node name="Empty" type="Control" parent="Display/Stats/Margin/VBox/Location"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Display/Stats/Margin/VBox/Location"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "Artis"
horizontal_alignment = 1

[node name="Selection" type="HBoxContainer" parent="Display/Stats/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Stats/Margin/VBox/Selection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Previous"

[node name="Empty" type="Control" parent="Display/Stats/Margin/VBox/Selection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Stats/Margin/VBox/Selection"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="EmptyMiddleLeft" type="Control" parent="Display"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmptyMiddleRight" type="Control" parent="Display"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Traits" type="PanelContainer" parent="Display"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"PanelSideRight"
script = ExtResource("4_1wiqu")

[node name="Margin" type="MarginContainer" parent="Display/Traits"]
layout_mode = 2
theme_override_constants/margin_right = 12

[node name="VBox" type="VBoxContainer" parent="Display/Traits/Margin"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Display/Traits/Margin/VBox"]
layout_mode = 2
text = "Traits"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Hairstyle" type="HBoxContainer" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Traits/Margin/VBox/Hairstyle"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "<"

[node name="EmptyLeft" type="Control" parent="Display/Traits/Margin/VBox/Hairstyle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Display/Traits/Margin/VBox/Hairstyle"]
layout_mode = 2
text = "Hairstyle"

[node name="EmptyRight" type="Control" parent="Display/Traits/Margin/VBox/Hairstyle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Traits/Margin/VBox/Hairstyle"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = ">"

[node name="HairColor" type="HBoxContainer" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Traits/Margin/VBox/HairColor"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "<"

[node name="EmptyLeft" type="Control" parent="Display/Traits/Margin/VBox/HairColor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Display/Traits/Margin/VBox/HairColor"]
layout_mode = 2
text = "Hair Color"

[node name="EmptyRight" type="Control" parent="Display/Traits/Margin/VBox/HairColor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Traits/Margin/VBox/HairColor"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = ">"

[node name="Gender" type="HBoxContainer" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Traits/Margin/VBox/Gender"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "<"

[node name="EmptyLeft" type="Control" parent="Display/Traits/Margin/VBox/Gender"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Display/Traits/Margin/VBox/Gender"]
layout_mode = 2
text = "Gender"

[node name="EmptyRight" type="Control" parent="Display/Traits/Margin/VBox/Gender"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Traits/Margin/VBox/Gender"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = ">"

[node name="Race" type="HBoxContainer" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Traits/Margin/VBox/Race"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "<"

[node name="EmptyLeft" type="Control" parent="Display/Traits/Margin/VBox/Race"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Display/Traits/Margin/VBox/Race"]
layout_mode = 2
text = "Race"

[node name="EmptyRight" type="Control" parent="Display/Traits/Margin/VBox/Race"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Traits/Margin/VBox/Race"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = ">"

[node name="SkinTone" type="HBoxContainer" parent="Display/Traits/Margin/VBox"]
layout_mode = 2

[node name="Previous" type="Button" parent="Display/Traits/Margin/VBox/SkinTone"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "<"

[node name="EmptyLeft" type="Control" parent="Display/Traits/Margin/VBox/SkinTone"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Display/Traits/Margin/VBox/SkinTone"]
layout_mode = 2
text = "Skin Tone"

[node name="EmptyRight" type="Control" parent="Display/Traits/Margin/VBox/SkinTone"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Display/Traits/Margin/VBox/SkinTone"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = ">"

[node name="EmptyRight" type="Control" parent="Display"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmptyBottom" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Display/Attributes/Margin/VBox/Strength/Minus" to="Display/Attributes" method="_on_strength_minus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Strength/Plus" to="Display/Attributes" method="_on_strength_plus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Vitality/Minus" to="Display/Attributes" method="_on_vitality_minus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Vitality/Plus" to="Display/Attributes" method="_on_vitality_plus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Agility/Minus" to="Display/Attributes" method="_on_agility_minus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Agility/Plus" to="Display/Attributes" method="_on_agility_plus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Endurance/Minus" to="Display/Attributes" method="_on_endurance_minus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Endurance/Plus" to="Display/Attributes" method="_on_endurance_plus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Concentration/Minus" to="Display/Attributes" method="_on_concentration_minus_button"]
[connection signal="pressed" from="Display/Attributes/Margin/VBox/Concentration/Plus" to="Display/Attributes" method="_on_concentration_plus_button"]
[connection signal="pressed" from="Display/Stats/Margin/VBox/Selection/Previous" to="Display/Stats" method="_on_previous_pressed"]
[connection signal="pressed" from="Display/Stats/Margin/VBox/Selection/Next" to="Display/Stats" method="_on_next_pressed"]
